--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@google-cloud/text-to-speech": "^3.1.1",
     "@microsoft/mixed-reality-extension-sdk": "^0.20.0",
-    "utm-latlng": "^1.0.6"
+    "geo-tz": "^6.0.0",
+    "moment-timezone": "^0.5.31"
   }
 }
