--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "@google-cloud/text-to-speech": "^3.1.1",
     "@microsoft/mixed-reality-extension-sdk": "^0.20.0",
     "geo-tz": "^6.0.0",
-    "moment-timezone": "^0.5.31"
+    "moment-timezone": "^0.5.31",
+    "say": "^0.16.0"
   }
 }
