--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --build",
-    "start": "node ."
+    "start": "node -r dotenv/config ."
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@microsoft/mixed-reality-extension-sdk": "^0.20.0",
+    "dotenv": "^8.2.0",
     "geo-tz": "^6.0.0",
     "moment-timezone": "^0.5.31",
     "text2wav": "0.0.13"
