--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --build",
-    "start": "node -r dotenv/config ."
+    "start": "node -r dotenv/config .",
+    "crawl": "node -r dotenv/config build/crawler.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cheerio": "^0.22.22",
+    "@types/superagent": "^4.1.10",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
+    "cheerio": "^1.0.0-rc.3",
     "eslint": "^7.12.0",
+    "superagent": "^6.1.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
