--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@typescript-eslint/parser": "^4.5.0",
     "cheerio": "^1.0.0-rc.3",
     "eslint": "^7.12.0",
+    "get-audio-duration": "^2.0.3",
     "superagent": "^6.1.0",
     "typescript": "^4.0.3"
   },
