--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "clone-deep": "^4.0.1",
     "dotenv": "^8.2.0",
     "geo-tz": "^6.0.0",
+    "gltf-bounding-box": "^0.4.1",
+    "gltf-pipeline": "^3.0.0",
     "moment-timezone": "^0.5.31",
     "text2wav": "0.0.13"
   }
